@@ -8,12 +8,15 @@ o error detection: does table node have exactly one row sub node
 
 o warning detection: non continuous sub oids in column node list?
 
-o warning detection: warning on NotificationName/ObjectName/ExtUTCTime
-  definitions.
-
 o warning detection: integer(signed) in index
 
 o error detection: parser-smi.y: remember SEQUENCE contents and check them
+
+o remove SMI_DECL_IMPL_SEQUENCEOF from smi.h: the smiv1/smiv2 parser 
+  should keep internal data structures for sequence types so that it 
+  can set the correct nodekinds and that it can check the SEQUENCE 
+  contents (see previous item). these internal data structures can
+  be released at the end of a MIB module.
 
 o warning detection: check, whether OIDs of indexed columns might be
   longer than 128 subids.
@@ -61,19 +64,11 @@ o use purify: data.c:freeData() is broken
 o various dump modules don't print identifiers fully qualified where
   appropriate
 
-o status of implicit types is unknown, but should be the same as the
-  object's status where it is implicitly defined
-
 o collapsing of type forward references in smiv2 parser. e.g.
   smiquery type CHARACTER-MIB.CharSessEntry
   should display the definition by a SEQUENCE statement, not `unknown'.
 
 o smilint on orig (RFC 1567) DSA-MIB crashes.
-
-o new feature: passing options to dump modules to allow some format
-  dependent adjustments like
-  - imports: showing imported modules just once
-  - ...
 
 o currently, make check passes only after make install
 
